Console.log rust macro

--- a/index.html
+++ b/index.html
@@ -1,141 +1,9 @@
-<!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title>MDN Games: Three.js demo</title>
-	<style>
-		body { margin: 0; padding: 0; }
-		canvas { width: 100%; height: 100%; }
-	</style>
-</head>
-
-<body>
-    <div id="container"></div>
-    <script src="js/three.min.js"></script>
-    <script id="vertexShader" type="x-shader/x-vertex">
-        void main() {
-            gl_Position = vec4( position, 1.0 );
-        }
-    </script>
-    <script id="fragmentShader" type="x-shader/x-fragment">
-        uniform vec2 u_resolution;
-        uniform float u_time;
-
-        vec4 permute(vec4 x) {
-          return mod((34.0 * x) * x, 289.0);
-        }
-
-        vec2 cellular_2x2(vec2 P) {
-          float K = 0.142857142857;      // 1/7
-          float K2 = 0.0;    // K/2
-          float jitter = 0.01;
-
-          vec2 Pi = mod((P), 289.0);
-          vec2 Pf = fract(exp2(P));
-
-          vec4 Pfx = Pf.x - vec4(-0.5, -1.5, -0.5, -1.5);
-          vec4 Pfy = Pf.y - vec4(-0.5, -0.5, -1.5, -1.5);
-
-          vec4 p = permute(Pi.x + vec4(0.0, 1.0, 0.0, 1.0));
-          p = permute(p + Pi.y + vec4(0.0, 0.0, 1.0, 1.0));
-
-          vec4 ox = mod(p, abs(2.0 * 2.0) * 2.0);
-          vec4 oy = mod(floor(p * K), 1.0) * K  + K2;
-
-          vec4 dx = Pfx + jitter * ox;
-          vec4 dy = Pfy + jitter * oy;
-          vec4 d = dx * dx + dy * dy;
-
-          d.yx = max(d.wy, d.zw);
-          d.x = min(d.x, d.y);
-
-          return d.xy;
-        }
-
-        void main() {
-            vec2 pos = (2.0 * gl_FragCoord.xy - u_resolution.xy) / u_resolution.y;
-            vec3 color = vec3(pos.x, pos.y, 0.5);
-            vec3 color_bg = vec3(1.0);
-
-            float zoom = -1.0;
-            vec2 cellular_pos = pos * zoom;
-
-            vec2 F = cellular_2x2(cellular_pos);
-            float time = mod(u_time, 60.0 * 6.0) + 666.0;
-            float a = dot(cellular_pos, cellular_pos) / time * 0.07;
-            float n = step( abs( log2(a * 3.1415 * 5.0) ), F.x * abs(1.40));
-            color = vec3(n);
-
-
-            color_bg = vec3(0.8, abs(sin(u_time * 0.5)) * 1.0, abs(sin(u_time)));
-            color_bg /= color;
-            color = color_bg;
-
-            gl_FragColor=vec4(color, 1.0);
-        }
-    </script>
-    <script>
-        var container;
-        var camera, scene, renderer;
-        var uniforms;
-
-        init();
-        animate();
-
-        function init() {
-            container = document.getElementById( 'container' );
-
-            camera = new THREE.Camera();
-            camera.position.z = 1;
-
-            scene = new THREE.Scene();
-
-            var geometry = new THREE.PlaneBufferGeometry( 2, 2 );
-
-            uniforms = {
-                u_time: { type: "f", value: 1.0 },
-                u_resolution: { type: "v2", value: new THREE.Vector2() },
-                u_mouse: { type: "v2", value: new THREE.Vector2() }
-            };
-
-            var material = new THREE.ShaderMaterial( {
-                uniforms: uniforms,
-                vertexShader: document.getElementById( 'vertexShader' ).textContent,
-                fragmentShader: document.getElementById( 'fragmentShader' ).textContent
-            } );
-
-            var mesh = new THREE.Mesh( geometry, material );
-            scene.add( mesh );
-
-            renderer = new THREE.WebGLRenderer();
-            renderer.setPixelRatio( window.devicePixelRatio );
-
-            container.appendChild( renderer.domElement );
-
-            onWindowResize();
-            window.addEventListener( 'resize', onWindowResize, false );
-
-            document.onmousemove = function(e){
-              uniforms.u_mouse.value.x = e.pageX
-              uniforms.u_mouse.value.y = e.pageY
-            }
-        }
-
-        function onWindowResize( event ) {
-            renderer.setSize( window.innerWidth, window.innerHeight );
-            uniforms.u_resolution.value.x = renderer.domElement.width;
-            uniforms.u_resolution.value.y = renderer.domElement.height;
-        }
-
-        function animate() {
-            requestAnimationFrame( animate );
-            render();
-        }
-
-        function render() {
-            uniforms.u_time.value += 0.05;
-            renderer.render( scene, camera );
-        }
-    </script>
-</body>
+  <head>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
+  </head>
+  <body>
+    <p>Open up the developer console and you should see "Hello from Rust!"</p>
+  </body>
 </html>
+
