--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
   </head>
   <body>
-    <p>Open up the developer console and you should see "Hello from Rust!"</p>
+    <canvas id="canvas" height="150" width="150" />
   </body>
 </html>
-
