Shader changes color

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
+<!doctype html>
 <html>
   <head>
-    <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
+    <title>Hello World program in GLSL</title>
+      <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+          <link href="style.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
+    <p>Hello World! Hello GLSL!</p>
     <canvas id="canvas" height="150" width="150" />
   </body>
 </html>
